--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
         "start": "nodemon server.js"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.17.2",
+        "nodemailer": "^6.7.2",
         "redis": "^4.0.1"
     },
     "devDependencies": {
